--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -1,21 +1,30 @@
 [application]
 
 [web.app]
-
-# HTML title tag content
 title = "zhengbi_yong_homepage"
 
 # include `assets` in web platform
 [web.resource]
 
 # Additional CSS style files
-style = []
+style = [
+    "https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css",
+    "https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/github-dark.min.css"
+]
 
 # Additional JavaScript files
-script = []
+script = [
+    "https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js",
+    "https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js",
+    "https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"
+]
 
+# ES Module scripts
+[web.resource.module]
+script = [
+    "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs"
+]
+
+# 开发环境资源配置（本地 JavaScript 文件现在通过 main.rs 中的 document::Script 组件加载）
 [web.resource.dev]
-
-# Javascript code file
-# serve: [dev-server] only
 script = []
