--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,16 @@ anyhow = "1.0"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = "0.2"
-web-sys = "0.3"
+web-sys = { version = "0.3", features = [
+    "console",
+    "Window",
+    "Document",
+    "Element",
+    "HtmlElement",
+    "Node",
+    "HtmlScriptElement",
+    "HtmlHeadElement"
+]}
 
 [build-dependencies]
 chrono = "0.4"
