--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -22,9 +22,7 @@ script = [
 
 # ES Module scripts
 [web.resource.module]
-script = [
-    "https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs"
-]
+script = []
 
 # 开发环境资源配置（本地 JavaScript 文件现在通过 main.rs 中的 document::Script 组件加载）
 [web.resource.dev]
